# Eva

./: .env.example  .gitignore  AGENTS.md  RELEASE_NOTES.md  ReadMe.md  env-guide.md  feature-list.json  increment-request.json  init.ps1  init.sh  long-task-guide.md  pyproject.toml  requirements.txt  task-progress.md
examples/: README.md
harness/: __init__.py
scripts/: .long-task-plugin-root  analyze-tokens.py  auto_loop.py  auto_loop_opencode.py  check_ats_coverage.py  check_configs.py  check_devtools.py  check_env_guide_approval.py  check_real_tests.py  check_source_lang.py  check_source_lang.sh  check_srs_trace_coverage.py  check_st_readiness.py  check_tokens_fidelity.sh  claude-hook-bridge.py  count_pending.py  feature_paths.py  find-polluter.sh  get_tool_commands.py  init_project.py  migrate_sub_status.py  phase_route.py  svc-api-start.ps1  svc-api-start.sh  svc-ui-dev-start.ps1  svc-ui-dev-start.sh  validate_ats.py  validate_bugfix_request.py  validate_env_guide.py  validate_features.py  validate_guide.py  validate_st_cases.py
tests/: conftest.py  test_cli_dialog_actuator.py  test_cli_dialog_decider.py  test_cli_dialog_models.py  test_cli_dialog_recognizer.py  test_cli_dialog_split_keystrokes.py  test_config_workdirs.py  test_f01_app_bootstrap.py  test_f01_bind_guard.py  test_f01_claude_auth.py  test_f01_config_store.py  test_f01_coverage_supplement.py  test_f01_first_run.py  test_f01_health_endpoint.py  test_f01_keyring_gateway.py  test_f01_zh_cn_text.py  test_f02_audit_writer.py  test_f02_coverage_supplement.py  test_f02_recovery.py  test_f02_schema_run_repo.py  test_f02_state_machine.py  test_f02_ticket_repository.py  test_f10_con005_reverse.py  test_f10_coverage_supplement.py  test_f10_environment_isolator.py  test_f10_plugin_registry.py  test_f10_skills_installer.py  test_f10_skills_rest.py  test_f12_static_serve.py  test_f18_adapter_protocol.py  test_f18_adapter_spawn.py  test_f18_coverage_supplement.py  test_f18_hil_extractor.py  test_f18_hil_writeback.py  test_f18_opencode_hooks.py  test_f18_pty_perf.py  test_f18_stream_parser.py  test_f18_w4_api_hook.py  test_f18_w4_bridge_script.py  (+42 more)
(+310 files in other folders)
