[project]
name = "harness"
version = "0.0.0"
description = "Harness — desktop wrapper driving longtaskforagent 14-skill pipeline"
requires-python = ">=3.11,<4"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["harness"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["harness", "tests"]
exclude = ["reference", ".venv", "apps/ui"]

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = "reference|\\.venv|apps/ui"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["harness"]
exclude = ["reference/", "apps/ui/"]

[tool.mutmut]
paths_to_mutate = [
  "harness/domain/ticket.py",
  "harness/domain/state_machine.py",
  "harness/persistence/errors.py",
  "harness/persistence/schema.py",
  "harness/persistence/runs.py",
  "harness/persistence/tickets.py",
  "harness/persistence/audit.py",
  "harness/persistence/recovery.py",
]
tests_dir = [
  "tests/test_f02_audit_writer.py",
  "tests/test_f02_coverage_supplement.py",
  "tests/test_f02_recovery.py",
  "tests/test_f02_schema_run_repo.py",
  "tests/test_f02_state_machine.py",
  "tests/test_f02_ticket_repository.py",
]
